--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en-ca">
 <head>
+  <script src="https://use.typekit.net/hgj7ize.js"></script>
+  <script>try{Typekit.load({ async: true });}catch(e){}</script>
   <meta charset="utf-8">
-  <title>Title</title>
+  <link href="css/main.css" rel="stylesheet">
+  <title>Alisha Arial, Coming Soon!</title>
 </head>
 <body>
+  <h1>Alisha Arial</h1>
 
 </body>
 </html>
