--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en-ca">
 <head>
-  <script src="https://use.typekit.net/hgj7ize.js"></script>
-  <script>try{Typekit.load({ async: true });}catch(e){}</script>
   <meta charset="utf-8">
   <link href="css/main.css" rel="stylesheet">
   <title>Alisha Arial, Coming Soon!</title>
 </head>
-<body>
-  <h1>Alisha Arial</h1>
+  <body background="images/background.jpg">
+    <span class="centered">
+      <h1>Alisha Arial</h1>
+      <h2>Portfolio website coming soon</h2>
+      <div class="bio">
+        <p>I am a motivated, unique, visual communicator who is passionate about design. My website is currently under construction so be sure to visit shortly to see some of my awesome projects!</p>
+      </div>
+      <h3>Let's Connect!</h3>
+      <p class="email">aria0023@algonquinlive.com</p>
+    </span>
 </body>
 </html>
