--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body background="images/background.jpg">
     <span class="centered">
       <h1>Alisha Arial</h1>
-      <h2>Portfolio website coming soon</h2>
+      <h2>Portfolio website coming soon!</h2>
       <div class="bio">
         <p>I am a motivated, unique, visual communicator who is passionate about design. My website is currently under construction so be sure to visit shortly to see some of my awesome projects!</p>
       </div>
@@ -16,4 +16,14 @@
       <p class="email">aria0023@algonquinlive.com</p>
     </span>
 </body>
+
+<footer>
+  <table>
+     <ul class="soc">
+            <li><a class="soc-linkdn" href="https://www.linkedin.com/in/alisha-arial-7685137a"></a></li>
+            <li><a class="soc-facebook" href="https://facebook.com/547484345345697"></a></li>
+            <li><a class="soc-google" href="https://plus.google.com/110793368636551489727/posts"></a></li>
+        </ul>
+  </table>
+</footer>
 </html>
