fixing the sizing and google fonts

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="utf-8">
   <link href="css/main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <title>Alisha Arial, Coming Soon!</title>
 </head>
   <body background="images/background.jpg">
     <span class="centered">
       <h1>Alisha Arial</h1>
-      <h2>Portfolio website coming soon!</h2>
+      <h2>Portfolio site coming soon!</h2>
       <div class="bio">
         <p>I am a motivated, unique, visual communicator who is passionate about design. My website is currently under construction so be sure to visit shortly to see some of my awesome projects!</p>
       </div>
