--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
   <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
   <title>Alisha Arial, Designer</title>
 </head>
   <body background="images/background.jpg">
     <span class="centered">
-      <h1>Alisha Arial</h1>
+      <h1 class="name">Alisha Arial</h1>
       <h2>Graphic Designer</h2>
       <div class="bio">
         <p>I am a motivated, unique, visual communicator who is passionate about design. My website is currently under construction so be sure to visit shortly to see some of my awesome projects!</p>
