--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1 class="name">Alisha Arial</h1>
       <h2>Graphic Designer</h2>
       <div class="bio">
-        <p>I am a very motivated visual communicator who is passionate about design. I really love layout design, typography, print, and graphics so you could say I am well versed in design. I am always up for a challenge and learning new things, which makes me great to work with.
+        <p>I am a very motivated visual communicator who is passionate about design. I really love layout design, typography, print, and graphics so you could say I am very well versed. I am always up for a challenge and learning new things, which makes me great to work with.
 <br><br>Besides being a quirky and unique designer I am also an animal lover and adventure seeker.
 <br><br>My website is currently under construction so be sure to visit shortly to see some of my awesome projects!
 </p>
